project-docs/versions/v2.54/tdd/[TDD]-cli.md
<!-- @id:[TDD]-cli -->
## cli TDD

```yaml
target_file: skill/ait/ait/cli.py
```

### 技术栈
Python 3.10+；click、json；导入分发到全部 manager。

### 实现约束
只分发不含业务逻辑：每命令解析参数→调 manager→ok/fail 输出 JSON；stdout 必须单个 JSON(Windows reconfigure utf-8)。

### 代码结构
- 输出契约：ok(data)→{ok:true,data}；fail(message,code,exit_code,details)→{ok:false,error,code}+sys.exit；_json_safe(datetime/dataclass/pydantic 序列化)。
- _read_content/_scoped_filename/_root(ctx)/_emit_wrapper_hints。
- main click group：resolve_project_root 存 ctx。
- 命令组：init；prdv1(旧模型 create/save-draft/confirm/commit/show/resolve-candidates)；prd(新模型 **create〔**P7:需已有活动版本——无活动版本报 `NO_ACTIVE_VERSION`，须先 `version create`，不再自动开版本**〕/confirm〔PRD 层冻结：锁 PRD chunk+phase→prd-confirm〕/revert〔成对返工：解锁回 working+phase→prd-creating〕**；**link 已退役——三种关系全部随内容创建原子出生：derives 随 fsd create --parent、decomposes 随 fsd decompose(仅 FSD 向下)、details 随 tdd create --parent、depends_on 随 fsd create 的 split 内 yaml 声明；add_edge 为纯内部原语(v2.50 退役 CLI `specgraph add-edge`——它直写 baseline、绕 check_edge_write 与六不变式门禁,是唯一用户可注入违规边的路径;建边只经内容创建)**)；impl；task；**version(create〔**P7:有活动未 merged 版本报 `ACTIVE_VERSION_EXISTS`**〕/confirm/merge/revert + legacy status/commit)**；fsd(**create〔可 --parent <prd-root>：派生即建 derives 边(PRD→FSD 唯一)〕/decompose〔拆分即建 decomposes 边：仅 FSD split→FSD 根，PRD 不经此〕/confirm〔FSD 层冻结 phase→fsd-confirm〕/revert〔成对返工 phase→fsd-creating〕**；link 退役)；tdd(**create〔可 --parent <fsd_split>：原子建 details 边，创建即建边〕/confirm〔TDD 层冻结 phase→tdd-confirm〕/revert〔成对返工 phase→tdd-creating〕**)；codegen(prepare)；**acceptance(run〔跑配置的验收命令并回显〕/set〔写 config.yaml acceptance_command〕)**（init 透传 InitManagerError.code：**INVALID_PROJECT_NAME/BOOTSTRAP_FAILED** 等，不再笼统 INIT_FAILED）；specgraph(含 validate-new-model;无 add-edge,已退役)；context/state/lint/search/deps/impact/reindex/baseline-summary/migrate-block-to-chunk。
- **version 命令语义（新模型主线四件套）**：`create <v>`（显式开版本，已存在报错，堵幽灵版本）；`confirm <v>`（**纯门禁**——调 `mgr.gate`，报告 passed + 六不变式违例明细，可重复跑、零落盘、不合入）；`merge <v>`（**原子合入**——调 `mgr.confirm`，内部先过同一门禁再 backup→merge→specgraph 提升→git commit，失败字节级回退；旧 `--conflict-policy` 保留）；`revert <v>`（调 `mgr.reset`，`--confirm` 二次确认物理清空未合入版本）。legacy `commit`（三态锁定）与 `status` 保留。

### 错误处理
捕 ValidationError/VersionManagerError/各 Error→fail(code)；根错误在 main 抛。**JSON 契约全覆盖（审计 R3-05）：main 为 JsonGroup 子类——click UsageError（未知命令/缺参/非法 Choice）不再裸 usage 文本，改输出 `{ok:false,error,code:"USAGE_ERROR"}` 后 exit 2；其余 ClickException → `code:"CLI_ERROR"`；--help/Exit/Abort 行为不变。stdout 永远是单个 JSON 或帮助文本。**

- **讨论背景模式(v2.53)**:prd/fsd/tdd create 的 --content/--content-file 均缺省时不再报错,改调 `prepare_discussion` 输出讨论背景 JSON(零写入);fsd decompose 无 content 且 child 不存在同理;提供内容时走原写入路径,行为不变。

- **init 白板豁免(v2.54)**:main 回调 try resolve_project_root,except NotAtProjectRoot 时若 `ctx.invoked_subcommand=='init'` 则 ctx.obj['root']=<cwd>/project-docs 并 return(不 fail);其余 RootResolutionError 仍 fail(code)。NotAtProjectRoot 从 .root 导入。

### 单元测试要求
tests/test_e2e_cli.py、test_new_model_commands.py：命令路由、JSON 契约、prd/prdv1 重命名、各域 happy/error；**version/prd/fsd 四件套路由与契约（见前）；tdd create --parent 原子建 details 边、tdd confirm/revert 成对；端到端 prd→fsd→tdd→codegen 四层命令面合龙走通；acceptance run/set 路由与 JSON 契约（set 写配置、run 回显 passed/skipped）；prd link 已移除（no-such-command）;specgraph add-edge 已退役（no-such-command,gap-3）；fsd/tdd create 对不存在版本报 VERSION_NOT_FOUND；USAGE_ERROR JSON 化（未知命令/缺参/非法 Choice 三形态）、--help 仍输出帮助文本；init 非法 --name 返回 INVALID_PROJECT_NAME JSON**。pytest。
